Extracted Globals, fixed some line widths, applied some ide suggestions